maint: fixed spelling

--- a/costal.html
+++ b/costal.html
@@ -15,7 +15,7 @@
           <a href="index.html">city</a>
         </li>
         <li>
-          <a href="cost.html">coast</a>
+          <a href="costal.html">coast</a>
         </li>
       </ul>
     </nav>
